# chicago-transit

./: .dockerignore  .gitignore  DockerFile  Dockerfile  README.md  cloudbuild.yaml  main.py  pyproject.toml  requirements.txt
backend/transit_modes/: chicago_data_portal.py  cta_bus.py  cta_train.py
backend/utilities/: utilities.py
cta/: chicago_api.py  client.py  oauth.py  responses.py  route.py  stations.py  trains.py
frontend/: __init__.py  app.py  bq_queries.py  metrics.py
scripts/: __init__.py  bigquery.py  get_transit_data.py  main.py  script.py  scripts.py  test_script.py
src/chicago_transit/: __init__.py
transit_modes/: buses.py  chicago_data_portal.py  cta_buses.py  cta_trains.py  metra.py  trains.py
utilities/: utilities.py
